# ml_python_intro

./: 000_when_to_user.ipynb  00_scikit_learn_exercises.ipynb  01_iris_classification.ipynb  02_synthetic_datasets.ipynb  03_breast_cancer_classifier.ipynb  04_Boston_Housing_regressor.ipynb  05_wine_regressor.ipynb  06_knn_introduction.ipynb  07_ols_linear_regression.ipynb  08_ridge_kinear_regression.ipynb  09_lasso_linear_regression.ipynb  10_elasticnet_liner_regression.ipynb  11_liner_classifiers_binary.ipynb  12_neural_networks.ipynb  13_unsupervised_transforms.ipynb  D00-colab_notebook.ipynb  README.md  main.py  pyproject.toml
